--- a/snake/style.css
+++ b/snake/style.css
@@ -9,10 +9,11 @@
 
 body{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #e3f2fd;
+    background: #091427;
 }
 
 .wrapper{
@@ -23,8 +24,8 @@ body{
     flex-direction: column;
     justify-content: center;
     background: #293447;
-    border-radius: 5px;
-    box-shadow: 0 20px 40px rgba(52, 87, 220, 0.2);
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px rgba(52, 87, 220, 0.2);
 }
 
 .game-details{
@@ -53,37 +54,40 @@ body{
 }
 
 .controls{
+    margin-top: 20px;
+    width: 30vmin;
     display: flex;
     justify-content: space-between;
 
+    .up-down{
+        display: flex;
+        flex-direction: column;
+    }
+
     i{
-        padding: 25px 0;
-        text-align: center;
+        width: calc(30vmin/3);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #293447;
+        padding: 10px 0;
         font-size: 1.3rem;
         color: #b8c6dc;
-        width: calc(100%/4);
         cursor: pointer;
-        border-right: 1px solid #171b26;
-    }
-}
-
-@media screen and (max-width:800px){
-    .wrapper{
-        width: 90vmin;
-        height: 90vmin;
+        border: 1px solid #171b26;
     }
 
-    .game-details{
-        font-size: 1rem;
-        padding: 15px 30px;
+    i:hover{
+        background: #343952;
     }
 
-    .controls{
-        display: flex;
+    .left{
+        border-top-left-radius: 25px;
+        border-bottom-left-radius: 25px;
+    }
 
-        i{
-            padding: 15px 0;
-            font-size: 1rem;
-        }
+    .right{
+        border-top-right-radius: 25px;
+        border-bottom-right-radius: 25px;
     }
 }
