--- a/web/list/style.css
+++ b/web/list/style.css
@@ -1,3 +1,12 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #091427;
+}
+
 button{
     width: 150px;
     border-radius: 50px;
@@ -8,16 +17,32 @@ button{
     text-align: center;
 }
 
-.add {
-    background-color: green;
-}
+.buttons {
+    display: flex;
 
-.remove {
-    background-color: red;
+    .add {
+        background-color: rgb(0, 150, 0);
+        margin-right: 10px;
+
+        &:hover{
+            background-color: rgba(0, 180, 0);
+            cursor: pointer;
+        }
+    }
+
+    .remove {
+        background-color: rgb(150, 0, 0);
+
+        &:hover{
+            background-color: rgb(180, 0, 0);
+            cursor: pointer;
+        }
+    }
 }
 
 .list {
-    padding: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
     height: 150px;
     width: 300px;
     border-radius: 10px;
@@ -28,9 +53,12 @@ button{
 
 ul {
     list-style-type: none;
+    background-color: #10264d;
+    color: white;
+    font-size: 1.5rem;
     padding: 0;
 }
 
 li {
-    width: 300px;
+    width: 100%;
 }
